syntax = "proto3";

package lerpc;
option go_package = "./proto/liveness";


service Liveness {
  rpc LivenessRPC(LivenessMessage) returns (LivenessMessage) {}
}

message LivenessMessage {
  bytes VersionTag = 1;
  NodeInfo Sender = 3;
  repeated NodeInfo NeighborInfo = 4;
}

message NodeInfo {
  string Host = 1;
  bytes NodeId = 2;
  bool OK = 3;
  uint64 SuccessfulWrites = 4;
}